# Lab---Experimentacao-de-Software

./: .gitignore  README.md
lab-01/: .gitignore  README.md
lab-01/charts/: metricsresultados1000Repos.txt
lab-01/code/: analise.py  csv_controller.py  data_writer.py  github_graphql.py  main.py  requirements.txt
lab-01/data/: resultados1000Repos.csv  resultados100Repos.csv
lab-02/: README.md
lab-02/code/: .env.example  Makefile  analise.py  analyze.py  ck_metrics_extractor.py  csv_controller.py  github_graphql.py  main.py  pyproject.toml  requirements.txt
lab-02/code/ck/: get_ck.sh  (+1 more)
lab-02/data/: final_metrics.txt
lab-03/: README.md
lab-03/code/: Makefile  analysis_rqs.py  dataset.py  gh_api.py  main.py  requirements.txt
lab-03/data/: metrics_report.md
lab-04/: README.md
lab-04/bi/: lab04-resultados.v01.pbix  lab04-resultados.v02.pbix  lab04-resultados.v03.pbix
lab-04/code/: .env.example  Makefile  analysis_rqs.py  analyze.py  dataset.py  gh_api.py  main.py  oms_limits.py  openaq_api.py  pyproject.toml  requirements.txt
lab-04/code/data/analysis/: info_sensores_por_cidade.csv  percentual_excedencia_por_cidade.csv  ranking_cidades_por_poluente.csv
lab-04/code/data/analysis/rankings_por_poluente/: ranking_co.csv  ranking_no2.csv  ranking_o3.csv  ranking_pm10.csv  ranking_pm25.csv  ranking_so2.csv
lab-04/code/data/oms/: oms_annual_limits.csv  oms_daily_limits.csv
lab-04/code/data/raw/: openaq_brazil_monthly.csv  openaq_brazil_sensors.csv  openaq_brazil_yearly.csv
project-01/: README.md
project-01/code/: main.py  requirements.txt
(+8 files in other folders)
