[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab04-dashboard"
version = "0.1.0"
description = "LAB-04: pipeline de dados públicos para BI"
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]
